Fixed overflow hidden for the slide

--- a/slides/src/minislides.css
+++ b/slides/src/minislides.css
@@ -27,6 +27,7 @@
   opacity : 0;  
   top : 50%;
   left: 150%;
+  overflow: hidden;
 }
 
 .slidedeck section.active {
